# llama-index-tools-searchapi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
llama_index/tools/searchapi/: base.py
tests/: test_tools_searchapi.py
